# History-Anchor-Protocol

./: ARCHITECTURE.md  AUTHORS.md  BITCOIN_ANCHORING.md  BUILD_REPORT.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FINAL_REVIEW.md  FOUNDER_DECISIONS.md  FUNDING.md  FUNDING_MANIFEST.json  GENESIS_STATEMENT.md  GITHUB_PUBLISHING.md  GOVERNANCE.md  LEGAL_BOUNDARIES.md  LICENSE  OPEN_SOURCE.md  OPERATIONS.md  PRIVACY_AND_ERASURE.md  PROTOCOL.md  README.md  RECOVERY.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RESPONSIBLE_PUBLICATION.md  SBOM.spdx.json  SECURITY.md  THREAT_MODEL.md  TRUST_MODEL.md  UPLOAD_SAFETY.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  start-mac-linux.sh  start-windows.bat
conformance/: v1.0-provenance-vector.json  v1.0-responsible-vector.json  v1.0-vector.json
deploy/: backup.sh  bitcoin-signet.conf.example  deploy.sh
examples/: example-claim.json
hap/: anchors.py  api.py  archive.py  assessment.py  auth.py  batches.py  bitcoin.py  cli.py  codec.py  config.py  crypto.py  discovery.py  evidence_store.py  funding.py  merkle.py  middleware.py  packages.py  policy.py  proofs.py  provenance.py  records.py  responsible.py  service.py  storage.py  survival.py  sync.py  view_manifest.py  wallets.py
scripts/: build_release.sh  check_publication_markers.py  dependency_audit.sh  finalize_public_identity.py  network_smoke.sh  package_public_release.py  prepare_public_release.sh  regtest_e2e.sh
tests/: test_bitcoin_first.py  test_conformance.py  test_deployment.py  test_funding.py  test_protocol.py  (+14 more)
(+4 files in other folders)
